# wetterrekord

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/recordpy/: app.py  config.py  db.py  ingest.py  live.py  records.py
src/recordpy/static/: app.js  index.html  style.css
src/wetterrekord/: app.py  config.py  db.py  dwd.py  ingest.py  live.py  ogimage.py  records.py
src/wetterrekord/static/: app.js  index.html  style.css
tests/: test_api.py  test_dwd.py  test_ingest_daemon.py
