[project]
name = "recordpy"
version = "0.4.0"
description = "Temperature records in Germany — live map based on DWD open data"
readme = "README.md"
authors = [
    { name = "cygnusb", email = "cygnusb@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
recordpy = "recordpy:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
